[package]
name = "size-ser"
version = "0.1.0"
edition = "2021"
description = "Seralizer for serde to compute a lower bound for the size of any type that is Serialize."
repository = "https://github.com/jdhouseholder/size-ser"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.197" }
paste = "1.0.15"

[dev-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
